# my_app

./: firebase.json  pubspec.yaml  진행 순서.txt  할거.txt
android/: build.gradle.kts
android/app/: build.gradle.kts  google-services.json
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native_lib.cpp  native_lib.h
android/app/src/main/kotlin/com/example/my_app/: MainActivity.kt
lib/: Network.dart  address.dart  address_to_gridxy_korea.dart  firebase_options.dart  kma_afs_forecast.dart  loading.dart  main.dart  test_api.dart  ui2_screen.dart  ui3_screen.dart  ui4_screen.dart  xyTest.dart
myapplication/: build.gradle.kts
test/: widget_test.dart
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
